--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,7 +8,7 @@
     text-align: center;
     margin-bottom: 1.5rem;
     font-size: 2.5rem;
-    color: #222;
+    color: #facc15;
 }
 
 .movies-grid {
